# libssh

./: README.md
.github/: membrowse-targets.json
.github/workflows/: build.yml  membrowse-onboard.yml  membrowse-report.yml  test.yml
libssh/: CMakeLists.txt  Kconfig  config.h  footprint.md  idf_component.yml  install.sh
libssh/examples/bastion/: CMakeLists.txt  README.md  sdkconfig.defaults
libssh/examples/bastion/main/: CMakeLists.txt  bastion.c  idf_component.yml  softap.c  ssh_host_ed25519_key  ssh_vfs.c
libssh/examples/esp_ssh/main/: CMakeLists.txt  idf_component.yml  server.c  ssh_vfs.c
libssh/examples/serial/main/: idf_component.yml
libssh/examples/server/: README.md  sdkconfig.defaults
libssh/examples/server/main/: idf_component.yml  server.c
libssh/patches/: esp_idf_port.patch
libssh/port/: config.h  idf_compat.h
libssh/zephyr/: config.h  zephyr_stubs.c  zephyr_stubs.h
libssh/zephyr/sys/: termios.h
zephyr/: CMakeLists.txt  README.md  mbedtls_user_config.h  module.yml
zephyr/sample-app/: README.md
zephyr/sock_utils/include/: ifaddrs.h
